--- a/Netflix/html/style.css
+++ b/Netflix/html/style.css
@@ -216,6 +216,54 @@ header{
     max-width: max-content;
     margin: 0 auto;
 }
+.faq{
+    width: 100%;
+}
+.faq h1{
+    text-align: center;
+}
+.faq-list{
+    margin: 50px auto;
+    max-width: 815px;
+    font-size: 26px;
+}
+.faq-question , .faq-answer{
+    background: #303030;
+}
+.faq-question{
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 8px;
+    margin-bottom: 1px;
+}
+.faq-question::after{
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: url("../imagens/Group\ 1\ \(6\).svg") no-repeat center center;
+    transform: rotate(45deg);
+}
+.faq-question.active::after{
+    transform: rotate(0deg);
+}
+
+.faq-answer{
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.25s cubic-bezier(0.5 , 0, 0.1 ,1);
+}
+.faq-answer > div{
+    padding: 30px;
+    
+}
+.faq-answer.active{
+    max-height: 1200px;
+}
+
 p{
     margin: 16px auto;
 }
@@ -538,5 +586,68 @@ p{
     p{
         font-size: 0.9rem;
         font-weight: 100;
+    }
+}
+@media (max-width:800px){
+    .header{
+        padding: 0 15px;
+    }
+    .header img{
+        max-width: 90px;
+    }
+    .header a{
+        max-width: 90px;
+        padding: 4px 8px;
+    }
+    .main{
+        height: 500px;
+    }
+    .main h1{
+        font-size: 28px;
+    }
+    .main span,.main p{
+        width: 80vw;
+    }
+    .main span{
+        margin-top: 16px;
+    }
+    .main p{
+        margin-top: 10px;
+    }
+    .form-cta{
+        width: 100%;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-top: 10px;
+        max-width: 80vw;
+    }
+    .form-cta input{
+        font-size: 16px;
+        padding: 13px;
+
+    }
+    .form-cta button{
+        font-size: 16px;
+        justify-self: center;
+        padding: 4px 16px 8px 16px;
+        border-radius: 2px;
+    }
+    .form-cta button::after{
+        margin-left: 5px;
+        background-repeat: no-repeat;
+        background-position: bottom center;
+        background-size: 6px 12px;
+    }
+    section h1,.section p{
+        text-align: center;
+    }
+    section h1{
+        font-size: 26px;
+    }
+    .section{
+        font-size: 18px;
+    }
+    .grid{
+        grid-template-columns: 1fr;
     }
 }
